# mechanizm-poc

./: CMakeLists.txt
src/: main.cpp
